feat: populate civilian spaceport berths